--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                  &nbsp[<a data-bs-toggle="collapse" href="#some-classical" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                  [<a href="https://arxiv.org/abs/2010.05799">]paper</a>
                  [<a href="Papers/shrub-depth-model-theory.pdf">pdf</a>] <br>
-                 <p style="margin-bottom:0.2cm;">Arxiv preprint, Oct. 2020</p>
+                 <p style="margin-bottom:0.2cm;">Arxiv preprint, October 2020</p>
                  <div class="collapse" id="some-classical">
                      <div class="card card-body">
                          We consider classes of arbitrary (finite or infinite) graphs of bounded shrub-depth, specifically the class TM<sub>r,p</sub>(d) of p-labeled arbitrary graphs whose underlying unlabeled graphs have tree models of height d and r labels. We show that this class satisfies an extension of the classical Löwenheim-Skolem property into the finite and for MSO. This extension being a generalization of the small model property, we obtain that the graphs of TM<sub>r,p</sub>(d) are pseudo-finite. In addition, we obtain as consequences entirely new proofs of a number of known results concerning bounded shrub-depth classes (of finite graphs) and TM<sub>r,p</sub>(d). These include the small model property for MSO with elementary bounds, the classical compactness theorem from model theory over TM<sub>r,p</sub>(d), and the equivalence of MSO and FO over TM<sub>r,p</sub>(d) and hence over bounded shrub-depth classes. The proof for the last of these is via an adaptation of the proof of the classical Lindström's theorem characterizing FO over arbitrary structures.
@@ -416,21 +416,20 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                     <b>
                       Clique-width of point configurations
                     </b>
-                 (with
-                 <a href=https://cagirici.net/>Onur Çağırıcı</a>,
-                 <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>, and
-                 <a href=https://www.researchgate.net/scientific-contributions/Filip-Pokryvka-2132774538>
-                     Filip Pokrývka</a>)
+                 (with <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>)
                  [<a href="Papers/fpt-newsletter-dec-21.pdf">newsletter</a>]
                  <br>
                  <p style="margin-bottom:0.2cm;"><b>Invited article</b> in the Parameterized Complexity News (Newsletter of the Parameterized Complexity community), Vol 17, No. 3, December 2021</p>
                 </li>
 
                 <li>
-                <b>  A generalization of the Łoś-Tarski preservation theorem</b>
-                 [<a href="Papers/alc-lt.pdf">paper</a>]
-                 [<a href="Papers/alc-lt-talk.pdf">slides</a>]<br>
-                 <p style="margin-bottom:0.2cm;">Presented at the 14<sup>th</sup> Asian Logic Conference, IIT Bombay, India, January 2015</p>
+                <b> A generalization of the Łoś-Tarski preservation theorem</b>
+                    (with
+                    <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a> and
+                    <a href=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>)
+                    [<a href="Papers/alc-lt.pdf">paper</a>]
+                    [<a href="Papers/alc-lt-talk.pdf">slides</a>]<br>
+                    <p style="margin-bottom:0.2cm;">Abstract accepted at the 14<sup>th</sup> Asian Logic Conference, IIT Bombay, India, January 2015</p>
                 </li>
 
                 <li>
@@ -438,7 +437,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                  &nbsp[<a data-bs-toggle="collapse" href="#rms" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                  [<a href="Papers/rms-lt.pdf">paper</a>]
                  [<a href="Talks/rms-lt-talk.pdf">slides</a>]<br>
-                 <p style="margin-bottom:0.2cm;">Presented at the 29<sup>th</sup> Annual Conference of the Ramanujan Mathematical Society, IISER Pune, India, June 2014</p>
+                 <p style="margin-bottom:0.2cm;">Abstract accepted at the 29<sup>th</sup> Annual Conference of the Ramanujan Mathematical Society, IISER Pune, India, June 2014</p>
                  <div class="collapse" id="rms">
                      <div class="card card-body">
                          We present a family of preservation theorems that provide semantic characterization of Σ^0_n and Π^0_n theories, for each n >= 1, and hence generalize the classical Łoś-Tarski preservation theorem. Vis-`a-vis the characterizations of the aforesaid theories provided by H. J. Keisler in 1960 using sandwiches of finite orders, our semantic properties as well as our proofs are much simpler, and more naturally generalize the Łoś-Tarski theorem. We also explicitly relate the model-theoretic operations involved in our results, with those of Keisler.
@@ -586,7 +585,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
     </div>
 
  <hr />
-            <p align="right">Copyright 2021, Abhisekh Sankaran</p>
+            <p align="right">Abhisekh Sankaran, 2021</p>
      <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
