--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
       xmlns="http://www.w3.org/1999/html">
   <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JF75TNZ51"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-215534061-1');
+      gtag('config', 'G-2JF75TNZ51');
+      </script>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -473,6 +485,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             <ul>
             <li>
                 <b>Extension preservation in the finite and prefix classes of first order logic</b>
+                (with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a>)
                 <a data-bs-toggle="collapse" href="#yr-owls" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
                 <a href="Talks/ext-pres-yr-owls.pdf">[slides]</a>
                 <a href="https://www.youtube.com/watch?v=BNrQMbOq03g">[video]</a>
