--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <a href="Talks/ext-pres-yr-owls.pdf">[slides]</a>
                 <a href="https://www.youtube.com/watch?v=BNrQMbOq03g">[video]</a>
                 <br />
-                <p style="margin-bottom:0.2cm;">Talk at the <a href="https://www.cl.cam.ac.uk/events/owls/">Young Researchers - Online Worldwide Logic Seminar (YR-OWLS)</a>, November, 2020</p>
+                <p style="margin-bottom:0.2cm;"><b>Invited talk</b> at the <a href="https://www.cl.cam.ac.uk/events/owls/">Young Researchers - Online Worldwide Logic Seminar (YR-OWLS)</a>, November, 2020</p>
                 <div class="collapse" id="yr-owls">
                     <div class="card card-body">
                         It is well known that the classic Łoś-Tarski preservation theorem fails in the finite: there are first-order definable classes of finite structures closed under extensions which are not definable (in the finite) in the existential fragment of first-order logic. We strengthen this by constructing for every n, first-order definable classes of finite structures closed under extensions which are not definable with n quantifier alternations. The classes we construct are definable in the extension of Datalog with negation and indeed in the existential fragment of transitive-closure logic. This answers negatively an open question posed by Rosen and Weinstein.
