Added some talks and interview

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             <li>
                 <b>Algorithmic metatheorems - a survey</b>
                 [<a data-bs-toggle="collapse" href="#algo-meta" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
-                [<a href="Talks/heredit-fin-talk.pdf">slides</a>]<br />
+                [<a href="Talks/algometa-talk.pdf">slides</a>]<br />
                 <p style="margin-bottom:0.2cm;">Presented at the <a href="https://fmindia.cmi.ac.in/update2018/">Formal Methods Update (FMU) Meeting</a>, BITS Goa, India, July, 2018</p>
                 <div class="collapse" id="algo-meta">
                     <div class="card card-body">
@@ -589,8 +589,8 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
 
             <li>
                 <p style="margin-bottom:0.2cm;">
-                    <b>Interview for the newsletter of the Department of CSE, IIT Bombay</b>
-                    &nbsp[<a href="Other/interview.pdf">newsletter</a>]</p>
+                    <b>Interview for Bitstream, the newsletter of the Department of CSE, IIT Bombay</b>
+                    &nbsp[<a href="Other/Bitstream-interview.pdf">newsletter</a>]</p>
             </li>
 
             </ul>
