Edited fpt newsletter name

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                       Clique-width of point configurations
                     </b>
                  (with <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>)
-                 [<a href="Papers/fpt-newsletter-dec-21.pdf">newsletter</a>]
+                 [<a href="Papers/fpt-news-dec-21.pdf">newsletter</a>]
                  <br>
                  <p style="margin-bottom:0.2cm;"><b>Invited article</b> in the Parameterized Complexity News (Newsletter of the Parameterized Complexity community), Vol 17, No. 3, December 2021</p>
                 </li>
@@ -503,7 +503,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 &nbsp[<a data-bs-toggle="collapse" href="#heredit-fin" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                 [<a href="Talks/heredit-fin-talk.pdf">slides</a>]
                 [<a data-bs-toggle="collapse" href="#heredit-fin-talk" aria-expanded="false" aria-controls="collapseExample">Talk venues</a>]<br>
-                <p style="margin-bottom:0.2cm;">This is an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. February 2019.</p>
+                <p style="margin-bottom:0.2cm;">This talk presents an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. February 2019.</p>
                 <div class="collapse" id="heredit-fin">
                     <div class="card card-body">
                         The Los-Tarski theorem is a result from classical model theory that states that over arbitrary (finite or infinite) structures, a first order (FO) sentence is hereditary if, and only if, it is equivalent to a universal sentence. This theorem however fails when restricted to finite structures. Tait (1959) and independently Gurevich and Shelah (1984) showed that in the finite (i.e. over the class of all finite structures), there is an FO sentence that is hereditary but that is not equivalent to any universal sentence.<br><br>
@@ -572,7 +572,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 &nbsp<a data-bs-toggle="collapse" href="#pres-inexp" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
                  [<a href="Papers/Inexpressibility.pdf">pdf</a>]
                  <br>
-                 <p style="margin-bottom:0.2cm;">A small set of results that came about when the efforts at proving GLT(k) were still on. IIT Bombay, India, August 2012</p>
+                 <p style="margin-bottom:0.2cm;">A set of results that came about when the efforts at proving GLT(k) were still on. IIT Bombay, India, August 2012</p>
                  <div class="collapse" id="pres-inexp">
                      <div class="card card-body">
                         We investigate the applications of preservation theorems in showing inexpressibility results in FO.
