--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <p style="margin-bottom:0.2cm;">This talk presents an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. February 2019.</p>
                 <div class="collapse" id="heredit-fin">
                     <div class="card card-body">
+                        <div class="card-text">
                         The Los-Tarski theorem is a result from classical model theory that states that over arbitrary (finite or infinite) structures, a first order (FO) sentence is hereditary if, and only if, it is equivalent to a universal sentence. This theorem however fails when restricted to finite structures. Tait (1959) and independently Gurevich and Shelah (1984) showed that in the finite (i.e. over the class of all finite structures), there is an FO sentence that is hereditary but that is not equivalent to any universal sentence.<br><br>
                         In a recent paper [2], a strengthening of the above failure was shown: in the finite, for every k, there is a hereditary FO sentence that is not equivalent to any Σ<sup>0</sup><sub>2</sub> sentence that contains k existential quantifiers. We generalize this result by showing in the finite, that for every n, there is a hereditary FO sentence φ<sub>n</sub> that is not equivalent to any Σ<sup>0</sup><sub>n</sub> sentence. In short, (FO-)hereditariness over all finite structures is not capturable by any prefix class of FO. We show further that ¬φ<sub>n</sub> is expressible in Datalog(≠, ¬), thus answering in the negative an open question posed by Rosen and Weinstein [1], that asks whether FO ∩ Datalog(≠, ¬) is contained (semantically) inside some prefix class of FO. The methods used to show our result extend the ideas from [2] in a significant way, and involve the construction of structures that exhibit self-similarity.<br>
 
@@ -540,6 +541,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                         [1] Eric Rosen and Scott Weinstein. Preservation theorems in finite model theory. In International Workshop on Logic and Computational Complexity, pages 480–502. Springer, 1994.<br>
 
                         [2] Abhisekh Sankaran. Revisiting the generalized Los-Tarski theorem. In Logic and Its Applications - 8th Indian Conference, ICLA 2019, Delhi, India, March 1-5, 2019, Proceedings, pages 76–88, 2019.<br>
+                            </div>
                     </div>
                 </div>
                 <div class="collapse" id="heredit-fin-talk">
