Edited Rabin article added

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <p style="margin-bottom:0.2cm;"> <b> Reminiscences from the ACM A. M. Turing Centenary Celebrations at San Francisco, USA, June 2012 </b>
                 [<a href="Other/sf-experience.pdf">article</a>]
                 [<a href="Other/acmpress.pdf">ACM Press Release</a>]
-                [<a href="">On Michael Rabin</a>]</p>
+                [<a href="Other/on-rabin.pdf">On Michael Rabin</a>]</p>
             </li>
 
             <li>
