--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
       <div class="row" style="margin-top:100px" id="contact-info">
          <h1> Abhisekh Sankaran </h1>
          <h5>Post-doctoral Research Associate,
-            University of Cambridge, U.K.
+            University of Cambridge, United Kingdom
          </h5>
          <p><b>Email:</b> <i>firstname.lastname [at] cl.cam.ac.uk</i> | <b>Office:</b> +44 1223 763 541 <br>
-            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD.
+            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD, UK.
          </p>
           <hr />
           <div class="row" id="biography">
