--- a/index.html
+++ b/index.html
@@ -124,11 +124,23 @@
                  (with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a>)
                  [<a data-bs-toggle="collapse" href="#mso-undec" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                  [<a href="https://arxiv.org/abs/2011.02894/">arxiv</a>] <br>
-                 <p style="margin-bottom:0.2cm;">To appear in the proc. of the 30<sup>th</sup> Computer Science Logic (CSL), Göttingen, Germany, February 2022</p>
+                 <p style="margin-bottom:0.2cm;">Proc. of the 30<sup>th</sup> Computer Science Logic (CSL), Göttingen, Germany, pp. 17:1-17:17, February 2022</p>
                  <div class="collapse" id="mso-undec">
                      <div class="card card-body">
                          Seese's conjecture for finite graphs states that monadic second-order logic (MSO) is undecidable on all graph classes of unbounded clique-width.  We show that to establish this it would suffice to show that grids of unbounded size can be interpreted in two families of graph classes: minimal hereditary classes of unbounded clique-width; and antichains of unbounded clique-width under the induced subgraph relation.  We explore all the currently known classes of the former category and establish that grids of unbounded size can indeed be interpreted in them.
                      </div>
+                 </div>
+             </li>
+		 
+		 <li>
+                 <b>Pseudo-finiteness of arbitrary graphs of bounded shrub-depth</b>
+                 [<a data-bs-toggle="collapse" href="#shrub-pseudofin" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://arxiv.org/abs/2202.06308/">arxiv</a>] <br>
+                 <p style="margin-bottom:0.2cm;">ArXiv preprint, February 2022</p>
+                 <div class="collapse" id="shrub-pseudofin">
+                     <div class="card card-body">
+                         We consider classes of arbitrary (finite or infinite) graphs of bounded shrub-depth, specifically the classes TM<sub>r</sub>(d) of arbitrary graphs that have tree models of height d and r labels. We show that the graphs of TM<sub>r</sub>(d) are MSO-pseudo-finite relative to the class TM<sup>f</sup><sub>r</sub>(d) of finite graphs of TM<sub>r</sub>(d); that is, that every MSO sentence true in a graph of TM<sub>r</sub>(d) is also true in a graph of TM<sup>f</sup><sub>r</sub>(d). We also show that TM<sub>r</sub>(d) is closed under ultraproducts and ultraroots. These results have two consequences. The first is that the index of the MSO[m]-equivalence relation on graphs of TM<sub>r</sub>(d) is bounded by a (d+1)-fold exponential in m. The second is that TM<sub>r</sub>(d) is exactly the class of all graphs that are MSO-pseudo-finite relative to TM<sup>f</sup><sub>r</sub>(d). 
+			 </div>     
                  </div>
              </li>
 
@@ -158,6 +170,7 @@
                  [<a href="https://www.isichennai.res.in/~sujata/icla2021/proceedings.pdf">paper</a>]
                  [<a href="Papers/fv-prefix.pdf">pdf</a>]
                  [<a href="Talks/fv-prefix-talk.pdf">slides</a>]
+		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>] <br>
                  <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 9<sup>th</sup> Indian Conference on Logic and Applications (ICLA), Chennai, India, March 2021,  pp. 111-116</p>
                  <div class="collapse" id="feferman-vaught">
