--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
                  <p style="margin-bottom:0.2cm;">ArXiv preprint, February 2022</p>
                  <div class="collapse" id="shrub-pseudofin">
                      <div class="card card-body">
-                         We consider classes of arbitrary (finite or infinite) graphs of bounded shrub-depth, specifically the classes TM<sub>r</sub>(d) of arbitrary graphs that have tree models of height d and r labels. We show that the graphs of TM<sub>r</sub>(d) are MSO-pseudo-finite relative to the class TM<sup>f</sup><sub>r</sub>(d) of finite graphs of TM<sub>r</sub>(d); that is, that every MSO sentence true in a graph of TM<sub>r</sub>(d) is also true in a graph of TM<sup>f</sup><sub>r</sub>(d). We also show that TM<sub>r</sub>(d) is closed under ultraproducts and ultraroots. These results have two consequences. The first is that the index of the MSO[m]-equivalence relation on graphs of TM<sub>r</sub>(d) is bounded by a (d+1)-fold exponential in m. The second is that TM<sub>r</sub>(d) is exactly the class of all graphs that are MSO-pseudo-finite relative to TM<sup>f</sup><sub>r</sub>(d). 
-			 </div>     
+                         <div class="card-text">
+                         We consider classes of arbitrary (finite or infinite) graphs of bounded shrub-depth, specifically the classes TM<sub>r</sub>(d) of arbitrary graphs that have tree models of height d and r labels. We show that the graphs of TM<sub>r</sub>(d) are MSO-pseudo-finite relative to the class TM<sup>f</sup><sub>r</sub>(d) of finite graphs of TM<sub>r</sub>(d); that is, that every MSO sentence true in a graph of TM<sub>r</sub>(d) is also true in a graph of TM<sup>f</sup><sub>r</sub>(d). We also show that TM<sub>r</sub>(d) is closed under ultraproducts and ultraroots. These results have two consequences. The first is that the index of the MSO[m]-equivalence relation on graphs of TM<sub>r</sub>(d) is bounded by a (d+1)-fold exponential in m. The second is that TM<sub>r</sub>(d) is exactly the class of all graphs that are MSO-pseudo-finite relative to TM<sup>f</sup><sub>r</sub>(d).
+                         </div>
+			 </div>
                  </div>
              </li>
 
