--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                  [<a href="https://www.isichennai.res.in/~sujata/icla2021/proceedings.pdf">paper</a>]
                  [<a href="Papers/fv-prefix.pdf">pdf</a>]
                  [<a href="Talks/fv-prefix-talk.pdf">slides</a>]
-		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>] <br>
+		         [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>]
                  <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 9<sup>th</sup> Indian Conference on Logic and Applications (ICLA), Chennai, India, March 2021,  pp. 111-116</p>
                  <div class="collapse" id="feferman-vaught">
